    to iTunes from the Transfer manager.
  * Audio status component recognizes an Audio Stream, from an Audio file
    from an internet stream url. Clicking on it will take you to the
    Android Tab if it's an android stream or to the Library otherwise.
  * Fixes issues with download mediator refresh.
  * Fixes out of memory error.

 
 -- FrostWire Team <contact@frostwire.com>  Wed, 07 Oct 2011 21:31:56 -0500

frostwire (5.2.1) stable; urgency=high
  * Play/Pause player buttons now share the same button depending on state.
  * Mac OSX threading bug when importing .m3u playlist to new playlist fixed.
  * Pressing space bar pauses/resumes currently played audio.
  * Playlist files can be sorted correctly by track number when available.
  * FLAC playback support.
  * When a playlist has finished importing files, it's shown to the user.
  * Transfer manager remembers the position of its JSplitPane.
  * Transfer manager sorts downloads by default based on their creation date.
  * Transfer manager has new column "Started On" showing the date the transfer
    first started.
  * Drag and drop issues on playlist component for Mac OSX fixed.
  * Partial download dialog table can adjust column widths, a horizontal
    scrollbar will appear if the sum of the columns is wider than the dialog.
  * When playing an audio file, if it gets deleted FROM DISK from inside
    FrostWire, the audio file will stop playing.
  * Files can be dragged to the "Starred" playlist and they will be marked
    as starred. If files are dragged from Disk, creating a new playlist
    will be offered, and all the elements on the playlist will be starred.
  * Files can be deleted from the "Starred" playlist. This will cause the
    files to be unstarred on every other playlist where they belong.
  * The tables on the library remember the last position of their scrollbars
    during the session.
  * Double clicking on a playlist name starts editing the playlist name.